--- a/assets/scss/elements/body.scss
+++ b/assets/scss/elements/body.scss
@@ -1,6 +1,14 @@
 /* IMPACT - By DistinctiveThemes */
 @import url(https://fonts.googleapis.com/css?family=Quicksand&display=swap);
 
+* {
+    box-sizing: border-box;
+}
+
+.main-conntent {
+    margin-top: 6.5rem;
+}
+
 .clearfix {
     zoom: 1;
 }
@@ -123,6 +131,9 @@ blockquote {
     text-transform: uppercase;
 }
 
+.logo {
+    max-width: 200px;
+}
 
 /*-----------------------------------------------------------------------------------*/
 
@@ -144,7 +155,7 @@ blockquote {
     content: '';
     background-image: url(/images/overlays/04.png);
     min-width: 100%;
-    height: 100%;
+    height: auto;
     position: absolute;
     display: block;
     z-index: -1;
@@ -236,8 +247,8 @@ blockquote {
 
 #single-page-slider .carousel {
     z-index: 5 !important;
-    color: #fff;
-    text-shadow: rgba(0, 0, 0, 0.4) 0 1px 1px;
+    color: blue($color: #000000);
+    text-shadow: rgba(0, 0, 0, 0.432) 0 1px 1px;
 }
 
 
@@ -674,7 +685,7 @@ ul.tag-cloud li {
 /*-----------------------------------------------------------------------------------*/
 
 .navbar-inverse {
-    background-color: #202020;
+    background-color: rgba(0, 0, 0, 0.288);
     border: none;
     -webkit-transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
